--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/preset-env": "7.21.4",
     "babel-loader": "9.1.2",
     "copy-webpack-plugin": "11.0.0",
-    "eslint": "8.38.0",
+    "eslint": "^9.18.0",
     "eslint-config-htmlacademy": "9.0.0",
     "html-webpack-plugin": "5.5.1",
     "webpack": "5.79.0",
